Add test for ConstructBehaviour